@@ -8,6 +8,7 @@
 #include "tao/Messaging/Messaging.h"
 #include "tao/ORBInitializer_Registry.h"
 #include "tao/PI/PI.h"
+#include "tao/LocalObject.h"
 
 int g_nthreads = 1;
 bool g_setTimeout = true;
@@ -66,7 +67,7 @@ private:
 
 class MyORBinitializer
   : public virtual PortableInterceptor::ORBInitializer
-  , public virtual TAO_Local_RefCounted_Object
+  , public virtual CORBA::LocalObject
 {
 public:
   MyORBinitializer( ACE_CString orbID )
